2001-05-01  Ramiro Estrugo  <ramiro@eazel.com>

	* components/mozilla/main.c: (main): Make warnings and criticals
	stop in the debugger to make this beast easier to debug.
	
	* components/mozilla/nautilus-mozilla-content-view.c:
	Use Eel gtk boilerplate and method invocation macros.
	
2001-05-01  Ramiro Estrugo  <ramiro@eazel.com>

	* README:
	Add Mozilla 0.8.1 blurb.
	
2001-05-01  Dan Mueth  <dan@eazel.com>

	Updates to the header and first section of the User Manual.

	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:

2001-04-30  Ramiro Estrugo  <ramiro@eazel.com>

	* icons/crux_teal/backgrounds/Makefile.am:
	* icons/crux_teal/sidebar_tab_pieces/Makefile.am:
	* icons/crux_teal/throbber/Makefile.am:
	Forgot to change arlo to crux_teal in these 3.
	
2001-04-30  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	* icons/Makefile.am:
	* nautilus.spec.in:
	Rename the theme directories to match their displayed name.
	
	* icons/arlo
	* icons/villanova
	* icons/ardmore
	Old theme directory names.
	
	* icons/crux_teal
	* icons/sierra
	* icons/tahoe
	New theme directory names.

2001-04-30  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	Fixed 4964 (Files dragged to Trash from floppy don't
		    appear in Trash Can)
	Fixed 7406 (Trash doesn't work until first restart of Nautilus)
	Fixed 7976 (some files that you can't leave in the Trash just
		    silently go away instead of showing the dialog as
		    they should)

	New trash directories are created lazily, when someone tries to
	delete an item on the respective disk for the first time. The
	problem was that these new trash directories do not get integrated
	into the unified trash directory. Added logic to do that.
	
	* libnautilus-extensions/nautilus-file-operations.c:
	(nautilus_file_operations_copy_move):
	
	Before a move to trash operation is started check for any new
	trash directories and integrate them if needed.
	
	* libnautilus-extensions/nautilus-trash-directory.c: